@@ -15,7 +15,7 @@ public static partial class NetworkingManager
         StartGame =9,
         EndTurn =10,
         SquadComp =11,
-        //MapUpload =12,
+        CaptureNotif =12,
         //TileUpdate =13,
         MapDataInitiateConfirm = 14,
         ReplaySequence = 15,
