@@ -83,12 +83,7 @@ public class Projectile : DeliveryMethod
 
 	public override Tuple<bool,bool, string>  CanPerform(Unit actor, WorldObject target, int dimension = -1)
 	{
-		var newTarget = Process(actor, target);
-		if (newTarget.TileLocation.Position != target.TileLocation.Position)
-		{
-			return new Tuple<bool,bool, string>(false, false, "Cannot hit target");
-		}
-		
+		//var newTarget = Process(actor, target);
 		return new Tuple<bool,bool, string> (true,true, "");
 	}
 
