@@ -14,11 +14,8 @@ signing
 
 
 
-Specialist range buff
 only hit units middle of tile
-multiple actions sent at once
-grende preview out of range
-can't be used on officers tooltip
+
 capture notification broken
 
 
